<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView_artista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artist"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/textView_cancion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song" />

    <TextView
        android:id="@+id/textView_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album" />

</LinearLayout>