<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/button_focused">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_50"
            android:gravity="center"
            android:text="@string/tabla_nombre"
            android:textColor="@color/white"
            android:textSize="@dimen/text_big_40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <EditText
                style="@style/edit_text"
                android:id="@+id/artista"
                android:hint="@string/artist"
                android:maxLength="20" />

            <EditText
                style="@style/edit_text"
                android:id="@+id/cancion"
                android:hint="@string/song"
                android:maxLength="25"/>

            <EditText
                style="@style/edit_text"
                android:id="@+id/album"
                android:hint="@string/album"
                android:maxLength="10" />

            <ImageView
                android:layout_width="@dimen/dp_80"
                android:layout_height="@dimen/dp_80"
                android:layout_marginTop="@dimen/dp_20"
                android:src="@drawable/ic_baseline_album_48"
                tools:ignore="VectorDrawableCompat" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.495">

            <Button
                style="@style/button_text"
                android:id="@+id/volver"
                android:layout_marginEnd="@dimen/dp_8"
                android:text="@string/volver_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:rippleColor="@color/turquoise"
                app:strokeColor="@color/white"
                app:strokeWidth="3dp" />

            <Button
                style="@style/button_text"
                android:id="@+id/insertar"
                android:layout_marginStart="@dimen/dp_8"
                android:text="@string/insertar_btn"
                app:layout_constraintBottom_toTopOf="@+id/volver"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:rippleColor="@color/turquoise"
                app:strokeColor="@color/white"
                app:strokeWidth="@dimen/dp_6" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>