<?xml version="1.0" encoding="utf-8"?><!-- Constrain Layout que ocupe toda la pantalla y con fondo oscuro -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/button_focused"
        tools:context=".activities.MainActivity">

        <!--Imagen extraída de https://mageemusic.ca/for-students-only/-->
        <ImageView
            android:id="@+id/welcome_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/welcome"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.101" />

        <ImageButton
            android:id="@+id/play_btn"
            style="@style/button_music"
            android:backgroundTint="@color/dark_purple"
            android:src="@drawable/ic_baseline_play_circle_filled_24"
            app:layout_constraintBottom_toTopOf="@+id/button_bd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_imageview"
            app:layout_constraintVertical_bias="0.5"
            app:rippleColor="@color/light_purple"
            app:strokeColor="@color/white"
            app:strokeWidth="@dimen/dp_6" />

        <ImageButton
            android:id="@+id/pause_btn"
            style="@style/button_music"
            android:backgroundTint="@color/dark_purple"
            android:src="@drawable/ic_baseline_pause_circle_filled_24"
            app:layout_constraintBottom_toTopOf="@+id/button_bd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toEndOf="@+id/play_btn"
            app:layout_constraintTop_toBottomOf="@+id/welcome_imageview"
            app:layout_constraintVertical_bias="0.5"
            app:rippleColor="@color/light_purple"
            app:strokeColor="@color/white"
            app:strokeWidth="@dimen/dp_6" />

        <ImageButton
            android:id="@+id/stop_btn"
            style="@style/button_music"
            android:backgroundTint="@color/dark_purple"
            android:src="@drawable/ic_baseline_stop_circle_24"
            app:layout_constraintBottom_toTopOf="@+id/button_bd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toEndOf="@+id/pause_btn"
            app:layout_constraintTop_toBottomOf="@+id/welcome_imageview"
            app:layout_constraintVertical_bias="0.5"
            app:rippleColor="@color/light_purple"
            app:strokeColor="@color/white"
            app:strokeWidth="@dimen/dp_6" />

        <Button
            android:id="@+id/button_bd"
            style="@style/button_text"
            android:text="@string/ir_a_pantalla_2_bbdd"
            app:backgroundTint="@animator/button"
            app:layout_constraintBottom_toTopOf="@+id/button_camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_imageview"
            app:layout_constraintVertical_bias="0.8"
            app:rippleColor="@color/turquoise"
            app:strokeColor="@color/white"
            app:strokeWidth="@dimen/dp_6" />

        <Button
            android:id="@+id/button_camera"
            style="@style/button_text"
            android:text="@string/ir_a_pantalla_3_camara"
            app:backgroundTint="@animator/button"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button_gallery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_imageview"
            app:layout_constraintVertical_bias="0.882"
            app:rippleColor="@color/turquoise"
            app:strokeColor="@color/white"
            app:strokeWidth="@dimen/dp_6" />

        <Button
            android:id="@+id/button_gallery"
            style="@style/button_text"
            android:text="@string/ir_a_pantalla_4_galeria"
            app:backgroundTint="@animator/button"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_imageview"
            app:layout_constraintVertical_bias="0.8"
            app:rippleColor="@color/turquoise"
            app:strokeColor="@color/white"
            app:strokeWidth="@dimen/dp_6" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>